# supershod

./: CMakeLists.txt  README
data/: .directory  ambient.flac  click.flac  credits.flac  d.flac  h.flac  noise.flac  noise.glsl  pixel.glsl  shod.flac  super.flac  supershod-hd.desktop  supershod.desktop  vertex.glsl
data/icons/: cmake_install.cmake  icon.rc  supershod-hd.icns  supershod.icns
frontend/: index.html
server/: client.js  server.js
src/: CMakeLists.txt  common.c  common.h  main.c
src/gamestates/: CMakeLists.txt  bsod.c  credits.c  dosowisko.c  gaem.c  holypangolin.c  loading.c  logo.c  noise.c
